kalkulator nie cały

--- a/css/settings/_virables.scss
+++ b/css/settings/_virables.scss
@@ -5,8 +5,6 @@ $bnt2-background-color:#08A6E4;
 $footer-background-color:#F7F7F7;
 
 
-
-
 $element-color-1:#FB3B64;
 $element-color-2:#07ACE6;
 $element-color-3:#55DFB4;
@@ -19,13 +17,22 @@ $form-border:#A5A5A5;
 
 
 
+
+$color-grey:#A5A5A5;
+$color-redish:#FB3B64;
+$color-light-grey:#A5A5A5;
+$color-primary:#08A6E4;
+$color-green:#55DFB4;
+
+
+
 $bnt-text-color:#FFFFFF;
 $text-color:#000000;
 $second-text-color:#A5A5A5;
 $third-text-color:#08A6E4;
 $consent-text-color:#707070;
 $copy-text-color:#A5A5A5;
-
+$text-color-white:#FFFFFF;
 
 
 
