--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
-@import "settings/all";
+@import "settings/_all";
 @import "settings/_reset.css";
-@import "settings/mixins";
-@import "elements/all";
+@import "settings/_mixins";
+@import "elements/_all";
 * {
   margin: 0;
   padding: 0;
