--- a/css/style.scss
+++ b/css/style.scss
@@ -303,12 +303,12 @@ header {
 
 .box {
   font-family: 'Raleway', sans-serif;
+
   display: flex;
   background: $background-color;
   border: 1px solid $box-border-color;
   border-radius: 5px;
   align-items: center;
-  flex-wrap: wrap;
   height: 23.125em;
   width: auto;
   margin-bottom: 2em;
@@ -316,9 +316,10 @@ header {
   justify-content: space-between;
   @include phone {
     height: 43em;
-    width: 33em;
+    width: auto;
     margin-top: 2.625em;
     margin-bottom: 0;
+
   }
 }
 
@@ -356,6 +357,7 @@ header {
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
+    width: auto;
   }
 
   .box1text {
@@ -369,9 +371,13 @@ header {
     @include phone {
       width: 25em;
       margin: 0;
+      align-items: center;
     }
   }
   .rightside1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-left: 13em;
     width: auto;
     height: auto;
@@ -384,8 +390,8 @@ header {
     }
     .macbook {
       position: relative;
-      top: 5em;
-      right: 7em;
+      top:30%;
+      right: 20%;
       width: 24em;
       height: auto;
       z-index: 2;
@@ -403,12 +409,12 @@ header {
       transform: rotate(45deg);
       border-radius: 40px;
       position: relative;
-      left: 20%;
-      bottom: 10em;
+      bottom:30%;
+
       @include phone {
         position: relative;
         bottom: 6em;
-        left: 20%;
+        left: 15%;
       }
     }
   }
@@ -425,9 +431,12 @@ header {
 
   @include phone {
     display: flex;
-    justify-content: start;
-    margin-left: 0;
+    justify-content: center;
+    text-justify: auto;
     margin-bottom: 1.5em;
+    text-align: center;
+    font-size: 2em;
+    margin-left: 0;
   }
 }
 
@@ -440,8 +449,11 @@ header {
   margin-bottom: 1em;
   margin-top: 0.5em;
   @include phone {
-    margin: 0;
+    margin: 1em;
     padding-bottom: 1em;
+    position: relative;
+    bottom: 1em;
+    text-align: center;
   }
 }
 
@@ -450,135 +462,154 @@ header {
 
 
 .box2 {
-  width: 70em;
-  height: 25em;
+  height: auto;
+  width: 100%;
   display: flex;
+  justify-content: space-between;
   flex-direction: row-reverse;
-  align-items: center;
+
   @include phone {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: auto;
   }
 
   .box2text {
     display: flex;
-    width: 100%;
-    height: 100%;
+    width: 26em;
+    height: auto;
     flex-direction: column;
-    margin-left: 5em;
-    justify-content: center;
-    margin-right: 1em;
+    margin-left: 6em;
+    justify-content:center;
+    align-items: flex-start;
     @include phone {
-      margin: 0;
       width: 25em;
-      position: relative;
-      right: 2em;
-    }
-  }
-
-  .box2text > .h2box {
-    @include phone {
       margin: 0;
     }
   }
-
-  .box2text > .pbox {
-    @include phone {
-      margin-top: 2em;
-      padding-bottom: 2em;
-    }
-  }
-
   .rightside2 {
-    height: 80%;
-    width: 100%;
+    margin-right: 13em;
+    width: auto;
+    height:auto;
     @include phone {
-      padding-top: 1em;
-    }
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
+    }
     .phone {
       position: relative;
-      top: -1em;
-      left: 4em;
-      width: 26em;
+      top: 8em;
+      left: 5em;
+      width: 24em;
       height: auto;
       z-index: 2;
       @include phone {
         position: relative;
-        top: 1em;
-        left: 15%;
+        top:8em;
+        left: 1em;
+
       }
     }
-
     .element2 {
-      position: relative;
-      bottom: 21em;
-      width: 20em;
-      height: 20em;
+      width: 17em;
+      height: 17em;
       background-color: $element-color-2;
+      transform: rotate(45deg);
       border-radius: 50%;
-      left: 4em;
+      position: relative;
+      left: 20%;
+      bottom: 10em;
       @include phone {
         position: relative;
-
+        left: -1em;
+        bottom: 10em;
       }
     }
   }
 }
 
+.h2 {
+  text-align: left;
+  margin-right: 0.5em;
+  margin-top: 0.7em;
+  margin-bottom: 0;
+
+  @include phone {
+    text-align: center;
+    display: flex;
+    justify-content: start;
+    margin-right: 0;
+    margin-top: 0;
+    position: relative;
+    bottom: 2em;
+
+  }
+}
+
+.p2 {
+  font-size: 1.5em;
+  color: $text-color;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+  margin-right: 1em;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  @include phone {
+    margin: 1em;
+    padding-bottom: 1em;
+    position: relative;
+    bottom: 3em;
+    text-align: center;
+  }
+}
+
+
 
 /* third*/
 
 .third {
-  height: 23.125em;
-  width: 70.25em;
+  height: 23.250em;
+  width: auto;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: row;
-  justify-content: space-between;
   margin-bottom: 7em;
   @include phone {
     display: flex;
     flex-direction: column;
-    width: 33.125em;
+    width: auto;
     height: auto;
     margin-bottom: 0;
   }
 
-  .box33 {
+  .box3 {
     display: flex;
     align-items: center;
     background-color: $background-color;
     border: 1px solid $box-border-color;
     border-radius: 5px;
-    width: 39em;
+    width: 35%;
     height: 23.125em;
+    margin-right: 6em;
     @include phone {
       display: flex;
       flex-direction: column;
-      width: 33.125em;
+      width: 25em;
+      height: auto;
       margin-top: 2.625em;
+      margin-right: 0;
     }
-
-    .box3 {
-      display: flex;
-      width: 100%;
-      height: 100%;
-      flex-direction: column;
-      justify-content: center;
-      @include phone {
-        height: auto;
-      }
-
       .box3text {
-        padding: 2em;
         margin-top: 4em;
         @include phone {
-          margin: 0;
+          margin-top: 3em;
         }
-      }
     }
   }
 
@@ -594,8 +625,9 @@ header {
     @include phone {
       display: flex;
       flex-direction: column;
-      width: 33.125em;
+      width: 25em;
       margin-bottom: 2.625em;
+      height: auto;
     }
   }
 }
@@ -650,7 +682,7 @@ header {
 
 
     @include phone {
-      width: 18.313em;
+      width: auto;
       height: 15.688em;
       display: flex;
       flex-direction: column;
@@ -688,7 +720,7 @@ header {
   width: 26em;
   height: 31.125em;
   @include phone {
-    width: 24.5em;
+    width: auto;
     height: 17em;;
     display: flex;
     align-items: center;
